# LDtc

./: .gitignore  CMakeLists.txt  README.md
LDtc/: CMakeLists.txt
LDtc/Debug/: Log.cpp  Log.h
LDtc/Detection/: DetectionMath.h  DirectMethod.cpp  DirectMethod.h  QuadMethod.cpp  QuadMethod.h  VectorMethod.cpp  VectorMethod.h
LDtc/Structures/Geometric/Points/: Point.h  TimePoint.h
Modeling/DetectorsLocation/: CMakeLists.txt  main.cpp
Modeling/DetectorsLocation/Src/: DetectionMap.cpp  DetectionMap.h  MapIsolineVisualization.cpp  MapIsolineVisualization.h  MapVisualization.cpp  MapVisualization.h  Mat.h
Tests/: CMakeLists.txt  TestTools.cpp  TestTools.h  Tests.cpp
